[tool.poetry]
name = "smore-py"
version = "0.1.0"
description = ""
authors = ["Josix <josixwang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
pydantic = "^1.8.2"
numpy = "1.21.0"
networkx = "^2.6.3"
tqdm = "^4.62.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.10.2"
isort = "^5.9.3"
black = "^21.8b0"
mypy = "^0.910"
invoke = "^1.6.0"
flake8 = "^3.9.2"
coverage = {extras = ["toml"], version = "^6.0.2"}

[tool.poetry.scripts]
lint = "tasks.lint:lint"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100
